Alterando o titulo do site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="agenda">
         <header>
-            <h1>Criar Contato</h1>
+            <h1>Lista de Contatos</h1>
         </header>
         <div class="imagem">
             <img src="img/perfil.png" alt="logo image">
